e2e-system-tests/src/main/kubernetes/inmemory/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: b025a6d9d485201e94ffc26146f984aecdf35800
    app.quarkus.io/build-timestamp: 2023-05-24 - 10:48:42 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: apicurio-registry-e2e-system-tests
    app.kubernetes.io/version: 2.4.3-SNAPSHOT
  name: apicurio-registry-e2e-system-tests
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: apicurio-registry-e2e-system-tests
      app.kubernetes.io/version: 2.4.3-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: b025a6d9d485201e94ffc26146f984aecdf35800
        app.quarkus.io/build-timestamp: 2023-05-24 - 10:48:42 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
      labels:
        app.kubernetes.io/name: apicurio-registry-e2e-system-tests
        app.kubernetes.io/version: 2.4.3-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/apicurio/apicurio-registry-mem:latest-snapshot
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: apicurio-registry-e2e-system-tests
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: b025a6d9d485201e94ffc26146f984aecdf35800
    app.quarkus.io/build-timestamp: 2023-05-24 - 10:48:42 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: apicurio-registry-e2e-system-tests
    app.kubernetes.io/version: 2.4.3-SNAPSHOT
  name: apicurio-registry-e2e-system-tests
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: apicurio-registry-e2e-system-tests
    app.kubernetes.io/version: 2.4.3-SNAPSHOT
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: b025a6d9d485201e94ffc26146f984aecdf35800
    app.quarkus.io/build-timestamp: 2023-05-24 - 10:48:42 +0000
  labels:
    app.kubernetes.io/name: apicurio-registry-e2e-system-tests
    app.kubernetes.io/version: 2.4.3-SNAPSHOT
  name: apicurio-registry-e2e-system-tests
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: apicurio-registry-e2e-system-tests
                port:
                  number: 80
            path: /
            pathType: Prefix
